[project]
name = "whisper-service"
version = "2.0.0"
description = "PyTorch-based Whisper service with SimulStreaming innovations"
authors = [
    {name = "LiveTranslate Team", email = "team@livetranslate.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core Flask and web dependencies
    "Flask>=2.0.0",
    "Flask-SocketIO>=5.0.0",
    "Flask-CORS>=3.0.0",
    # Audio processing
    "numpy>=2.0.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "scipy>=1.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "audioread>=3.0.0",
    # WebSocket and networking
    "websockets>=12.0",
    "requests>=2.31.0",
    "python-socketio[client]>=5.11.0",
    # Async and utilities
    "asyncio-mqtt>=0.16.2",
    "python-dotenv>=1.0.0",
    # Redis for caching
    "redis>=5.0.0",
    "hiredis>=2.0.0",
    # Whisper and speech processing - Phase 2: PyTorch-based
    "openai-whisper>=20231117",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "tiktoken>=0.5.0",
    "faster-whisper>=0.9.0",
    # Audio analysis and visualization
    "matplotlib>=3.5.0",
    # Enhanced audio processing
    "webrtcvad>=2.0.10",
    "silero-vad>=4.0.0",
    # Speaker Diarization and Audio Enhancement
    "pyannote.audio>=3.1.0",
    "scikit-learn>=1.0.0",
    # Speech Enhancement
    "noisereduce>=2.0.0",
    # Advanced Audio Processing
    "speechbrain>=0.5.12",
    "resemblyzer>=0.1.1",
    # Audio feature extraction
    "python_speech_features>=0.6.0",
    # Additional dependencies for speaker diarization
    "seaborn>=0.11.0",
    "pandas>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
onnx = [
    # ONNX runtime for OpenVINO/ONNX model support (not needed for PyTorch)
    "onnxruntime>=1.18.0,<1.22.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "."

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3.1",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "psutil>=5.9.5",
    "hypothesis>=6.145.1",
    "ruff>=0.8.0",
]

# Pytest configuration is in pytest.ini (includes all markers: behavioral, npu, gpu, etc.)

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff config centralized in /ruff.toml at project root

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
