[project]
name = "translation-benchmark"
version = "0.1.0"
description = "Translation benchmarking harness for LiveTranslate"
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "livetranslate-common",
    "livetranslate-orchestration-service",
]

# NOTE: unbabel-comet (COMET scoring) requires numpy<2.0 which conflicts with
# workspace numpy>=2.3.5. Install in a separate venv if needed:
#   uv pip install unbabel-comet>=2.2 --python 3.12
# [project.optional-dependencies]
# comet = ["unbabel-comet>=2.2"]

[project.scripts]
translation-benchmark = "tools.translation_benchmark.run:main"

[tool.uv.sources]
livetranslate-common = { workspace = true }
livetranslate-orchestration-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/translation_benchmark"]
